[gd_scene load_steps=18 format=2]

[ext_resource path="res://AutomatonMap.gd" type="Script" id=1]
[ext_resource path="res://AutomatonMode/Resources/TileSets/AutomatonTileSet.tres" type="TileSet" id=2]
[ext_resource path="res://AutomatonMode/Scripts/Camera.gd" type="Script" id=3]
[ext_resource path="res://AutomatonMode/Scripts/UI.gd" type="Script" id=4]
[ext_resource path="res://AutomatonMode/Resources/Scenes/TileChoose.tscn" type="PackedScene" id=5]
[ext_resource path="res://AutomatonMode/Resources/Scenes/AlgorithmInterface.tscn" type="PackedScene" id=6]
[ext_resource path="res://AutomatonMode/Resources/icons/Clear_Pressed.png" type="Texture" id=7]
[ext_resource path="res://AutomatonMode/Resources/icons/Clear.png" type="Texture" id=8]
[ext_resource path="res://AutomatonMode/Scripts/Interface/SaveFileDialog.gd" type="Script" id=9]
[ext_resource path="res://resources/images/MenuInterface/icons/save pressed.png" type="Texture" id=10]
[ext_resource path="res://resources/images/MenuInterface/icons/load.png" type="Texture" id=11]
[ext_resource path="res://resources/images/MenuInterface/icons/save.png" type="Texture" id=12]
[ext_resource path="res://resources/images/MenuInterface/icons/load pressed.png" type="Texture" id=13]
[ext_resource path="res://AutomatonMode/Scripts/Interface/LoadFileDialog.gd" type="Script" id=14]
[ext_resource path="res://Pause.gd" type="Script" id=15]
[ext_resource path="res://resources/fonts/Troubleside.ttf" type="DynamicFontData" id=16]

[sub_resource type="DynamicFont" id=1]
size = 20
font_data = ExtResource( 16 )

[node name="Node2D" type="Node2D"]
pause_mode = 1
z_index = 1
script = ExtResource( 1 )

[node name="TileMap" type="TileMap" parent="."]
show_behind_parent = true
tile_set = ExtResource( 2 )
format = 1

[node name="Camera2D" type="Camera2D" parent="."]
anchor_mode = 0
current = true
drag_margin_h_enabled = true
drag_margin_v_enabled = true
script = ExtResource( 3 )

[node name="UI" type="CanvasLayer" parent="."]
script = ExtResource( 4 )

[node name="Interface" type="Control" parent="UI"]
anchor_right = 1.0
anchor_bottom = 1.0
rect_pivot_offset = Vector2( 1103.65, 636.168 )
input_pass_on_modal_close_click = false

[node name="ColorRect" type="ColorRect" parent="UI/Interface"]
margin_left = 960.0
margin_right = 1280.0
margin_bottom = 720.0
input_pass_on_modal_close_click = false
color = Color( 0.533333, 0.396078, 0.341176, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TileChoose" parent="UI/Interface/ColorRect" instance=ExtResource( 5 )]
margin_top = -40.0
margin_right = 0.0
margin_bottom = -580.0

[node name="AlgorithmInterface" parent="UI/Interface/ColorRect" instance=ExtResource( 6 )]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 1.0
margin_top = 162.0
margin_right = 1.0
margin_bottom = -1.0

[node name="Clear" type="TextureButton" parent="UI/Interface/ColorRect"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = 80.0
margin_top = -251.0
margin_right = 120.0
margin_bottom = -211.0
texture_normal = ExtResource( 8 )
texture_pressed = ExtResource( 7 )

[node name="Save" type="TextureButton" parent="UI/Interface"]
margin_left = 974.047
margin_top = 669.458
margin_right = 1014.05
margin_bottom = 709.458
texture_normal = ExtResource( 12 )
texture_pressed = ExtResource( 10 )

[node name="Load" type="TextureButton" parent="UI/Interface"]
margin_left = 1022.0
margin_top = 669.0
margin_right = 1062.0
margin_bottom = 709.0
texture_normal = ExtResource( 11 )
texture_pressed = ExtResource( 13 )

[node name="SaveFileDialog" type="FileDialog" parent="UI/Interface"]
pause_mode = 2
margin_left = 101.0
margin_top = 134.0
margin_right = 861.0
margin_bottom = 535.0
window_title = "Сохранить файл"
access = 2
filters = PoolStringArray( "*.ams" )
current_dir = "/Projects/godot/Project2/Project2"
current_path = "/Projects/godot/Project2/Project2/"
script = ExtResource( 9 )

[node name="LoadFileDialog" type="FileDialog" parent="UI/Interface"]
pause_mode = 2
margin_left = 101.0
margin_top = 134.0
margin_right = 861.0
margin_bottom = 535.0
window_title = "Открыть файл"
mode = 0
access = 2
filters = PoolStringArray( "*.ams" )
current_dir = "/Projects/godot/Project2/Project2"
current_path = "/Projects/godot/Project2/Project2/"
script = ExtResource( 14 )

[node name="Pause" type="Control" parent="UI/Interface"]
pause_mode = 2
margin_right = 40.0
margin_bottom = 40.0
script = ExtResource( 15 )

[node name="Label" type="Label" parent="UI"]
margin_left = 1065.0
margin_top = 678.0
margin_right = 1278.0
margin_bottom = 704.0
custom_fonts/font = SubResource( 1 )
text = "PRESS ESC TO EXIT"

[connection signal="tile_selected" from="UI/Interface/ColorRect/TileChoose" to="." method="_on_TileChoose_tile_selected"]
[connection signal="algorithm_started" from="UI/Interface/ColorRect/AlgorithmInterface" to="." method="_on_AlgorithmInterface_algorithm_started"]
[connection signal="current_player_changed" from="UI/Interface/ColorRect/AlgorithmInterface" to="." method="_on_AlgorithmInterface_current_player_changed"]
[connection signal="pressed" from="UI/Interface/ColorRect/Clear" to="." method="_on_Clear_pressed"]
[connection signal="pressed" from="UI/Interface/Save" to="UI/Interface/SaveFileDialog" method="_on_Save_pressed"]
[connection signal="pressed" from="UI/Interface/Load" to="UI/Interface/LoadFileDialog" method="_on_Load_pressed"]
[connection signal="file_selected" from="UI/Interface/SaveFileDialog" to="." method="save"]
[connection signal="popup_hide" from="UI/Interface/SaveFileDialog" to="UI/Interface/Pause" method="np"]
[connection signal="file_selected" from="UI/Interface/LoadFileDialog" to="." method="load_save"]
[connection signal="popup_hide" from="UI/Interface/LoadFileDialog" to="UI/Interface/Pause" method="np"]
